--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 ipython==8.12.3
+itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jsonpatch==1.33
@@ -63,12 +64,15 @@ pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
+pillow==10.3.0
 pipreqs==0.5.0
 platformdirs==4.2.2
 prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pydantic==2.7.1
+pydantic-extra-types==2.7.0
+pydantic-settings==2.2.1
 pydantic_core==2.18.2
 Pygments==2.18.0
 pymongo==4.7.2
